--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-123
+<head>
+    <title>KIRIYAK STUDIO - IT PROJECT</title>
+    </head>
+    <body>
+        <h1>IT PROJECT</h1>
+        <p>first text</p>
+        </body>
